# 0xMonaco

./: .gitignore  .gitmodules  .ignore  README.md  env.sample  foundry.toml  package-lock.json  subvisual-bradbury.txt
logs/seed_round/: lost_DN_2place.json  lost_Sir-clivev3_2place.json  lost_kubica_2place.json
notebooks/: LogAnalysis.ipynb  ReadSimulatorLog.ipynb  SimulateRuns.ipynb
simulations/: simulation.simulation
simulator/: Cargo.toml
simulator/src/: forge.rs  git.rs  lib.rs  lib_merkle.rs  main.rs
src/: Monaco.sol
src/cars/: B_biggerAccelFloor.sol  B_biggerEndBudget.sol  B_evenBiggerAccelFloor.sol  B_goBananas.sol  B_lagSpeed_blitzSpeed.sol  B_moreSpeedInBlitz.sol  B_smallerEndBudget.sol  BaseCar.sol  BiggerBetterBradbury.sol  Bradbury.sol  ExampleCar.sol  constants.sol
src/cars/bradbury/: Base.sol  biggerBetter.sol  biggerEndBudget.sol  evenBiggerAccelFloor.sol  goBananas.sol  lagSpeed_blitzSpeed.sol  moreSpeedInBlitz.sol  random.sol  smallerEndBudget.sol  v0.sol  v1.sol
src/cars/fardalheira/: Base.sol  v0.sol
src/cars/samples/: Floor.sol  MadCar.sol  PermaShield.sol  Saucepoint.sol  ThePackage.sol  c000r.sol
src/interfaces/: ICar.sol
test/: Monaco.t.sol  MonacoAbilities.t.sol  Simulate.t.sol
test/utils/: MockCar.sol
