[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forge = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "b2baca32bd1a3b31b6f6ae2950a14c5bb8607cdb" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "solc-full",
    "solc-tests",
] }
once_cell = "1.17.0"
hex-literal = "0.3.4"
hex = "0.4.3"
git2 = "0.16"
rayon = "1.4"
termion = "1.5"
regex = "1.7.1"
